# public-ids-research

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  experiments.md  pyproject.toml  requirements.txt
experiments/: baseline_cicflowmeter_binary_classifier.py  test_cnn_bilstm_cicflowmeter_binary_classifier.py  train_cnn_bilstm_cicflowmeter_binary_classifier.py
notebooks/: baseline_cicflowmeter_binary_classifier_results.ipynb  cicflowmeter_flows_preprocessing.ipynb  cnn-bilstm_cicflowmeter_binary_classifier_results.ipynb  cnn-bilstm_cicids2017_binary.ipynb  inspect-mawilab-samples.ipynb
src/ids_research/: __init__.py
src/ids_research/models/: __init__.py  cnn_bilstm.py
src/ids_research/preprocessors/: __init__.py  base.py  cicflowmeter.py
tests/: test_basepreprocessor.py  test_cicflowmeter.py  test_cnn_bilstm.py
