[project]
name = "ids-research"
dynamic = ["version"]
description = "My academic IDS research library"
readme = "README.md"
authors = [
    { name = "Joshua Schraven", email = "joshua.schraven@hsu-hh.de" }
]
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "duckdb>=1.2.2",
    "keras>=3.9.2",
    "matplotlib>=3.10.3",
    "mlflow>=2.22.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xgboost>=3.0.2",
]
default-optional-dependency = "cpu"

[project.optional-dependencies]
cpu = [
    "polars>=1.25.2",
]
cpu-lts = [
    "polars-lts-cpu>=1.25.2",
]
gpu = [
    "polars[gpu]>=1.25.2",
    "tensorflow[and-cuda]>=2.19.0",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.2.0",
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.8",
]

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"
